...

// MARK: - Setup UI & Constraints

private extension SettingsViewController {
    func setupUI() {
        view.backgroundColor = Constants.backgroundColor
        view.accessibilityIdentifier = "SettingsView"
        configureNavigationBar()
        configureSettingsTitleLabel()
        configureProfileImageView()
        configureProfileFullNameLabel()
        setupCollectionView()
        setupSwitchers()
...
    
    func configureSettingsTitleLabel() {
        settingsTitleLabel.text = Constants.settingsTitle
        settingsTitleLabel.font = Constants.settingsTitleLabelFont
        settingsTitleLabel.textColor = Constants.settingsTitleLabelTextColor
        settingsTitleLabel.textAlignment = .left
        settingsTitleLabel.accessibilityIdentifier = "SettingsTitleLabel"
    }
    
    func configureProfileImageView() {
        profileImageView.image = Constants.defaultProfileImage
        profileImageView.contentMode = .scaleAspectFill
        profileImageView.clipsToBounds = true
...
