...
        pickEmotionTitleLabel.textColor = Constants.pickEmotionTitleColor
        pickEmotionTitleLabel.font = Constants.pickEmotionTitleFont
        pickEmotionTitleLabel.numberOfLines = Metrics.defaultNumberOfLines
    }
    
    func configurePickEmotionButton() {
        pickEmotionButton.accessibilityIdentifier = "EmotionPickerButton"
    }
    
    func configureEmotionTitleLabel() {
        emotionTitleLabel.font = Constants.emotionTitleFont
    }
    
...
