...
            guard let self = self else { return false }
            return self.viewModel.addTag(tag, section: section)
        }
    }
    
    func configureSaveButton() {
        saveNoteButton.accessibilityIdentifier = "SaveNoteButton"
    }
    
    func setupConstraints() {
        view.addSubview(scrollView)
        view.addSubview(navigationBar)
        view.addSubview(saveNoteButton)
...
